# Bonsai-demo

./: .gitignore  README.md  pyproject.toml
chat/: agent.py  app.py  config.py  db.py  tool_parser.py
chat/static/: app.js  index.html  style.css
chat/static/js/: controls.js  conversations.js  core.js  memory.js  messages.js  settings.js  shortcuts.js  stats.js  uploads.js  voice.js
chat/tests/: test_agent.py  test_agent_memory.py  test_calculator.py  test_db.py  test_file_io.py  test_memory_dedup.py  test_python_exec.py  test_remember_tool.py  test_tool_parser.py  test_url_fetch.py  test_weather.py  test_web_search.py
chat/tools/: __init__.py  calculator.py  file_io.py  python_exec.py  remember.py  url_fetch.py  weather.py  web_search.py
docs/superpowers/plans/: 2026-04-06-bonsai-chat-features.md  2026-04-06-bonsai-chat.md  2026-04-07-autonomous-memory.md
docs/superpowers/specs/: 2026-04-06-bonsai-chat-design.md  2026-04-06-bonsai-chat-features-design.md  2026-04-07-autonomous-memory-design.md
scripts/: start_chat.ps1  start_chat.sh
