[project]
name = "bonsai-demo"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "huggingface-hub>=1.5.0",
    "cmake",
    "ninja",
    "setuptools",
]

[project.optional-dependencies]
webui = ["open-webui"]
chat = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "websockets>=14.0",
    "beautifulsoup4>=4.13.0",
    "ddgs>=7.0.0",
    "sympy>=1.13.0",
]

[tool.setuptools]
packages = []
